--- a/_sass/minima/custom-variables.scss
+++ b/_sass/minima/custom-variables.scss
@@ -1,8 +1,6 @@
 // Placeholder to allow overriding predefined variables smoothly.
 
 // Width of the content area
-$content-width:    1600px !default;
-$on-palm:          600px !default;
-$on-laptop:        1600px !default;
+$content-width:    100%;
 
 @import "minima";
