--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
     </main>
 
     {%- include footer.html -%}
+    
+    {%- include slider_styles.html -%}
+    {%- include slider_scripts.html -%}
+
 
   </body>
 
