--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
       </div>
     </main>
 
-    {%- include slider_styles.html -%}
-    {%- include slider_scripts.html -%}
+<!--     {%- include slider_styles.html -%}
+    {%- include slider_scripts.html -%} -->
 
     {%- include footer.html -%}
     
