--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-<!-- image_sliders:
+image_sliders:
   - slider1
   - slider2
-  - slider3 -->
+  - slider3
 ---
 
 <div class="home">
