--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
+  <head>
+
+    <link
+      rel="alternate"
+      type="application/atom+xml"
+      title="{{ site.title }}"
+      href="/feed.xml"
+    />
+
+  </head>
+
   {%- include head.html -%}
 
   <body>
